test/bad/generics/type02.px

func f<T>(T x, Bool b) T def
    return b

f("false", false)
